remove max-width on images and add overflow css rule to fix the overflow of project contents

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -41,7 +41,7 @@ $navbar-height: 85px;
 body {
     scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif;
-    overflow-x: hidden !important;
+    // overflow-x: hidden !important;
 }
 
 
@@ -50,6 +50,10 @@ body {
     grid-template-areas: 'sidebar main';
     grid-template-columns: 1fr 4fr;
     gap: 2rem;
+}
+
+.pj-content {
+    overflow-x: hidden;
 }
 
 .pj-sidebar {
